clusters/talos-ottawa/apps/media/app/tautulli/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: tautulli/tautulli:v2.17.1
        ports:
        - name: http
          containerPort: 8181
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media-share
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: http
    port: 8181
    protocol: TCP
    targetPort: 8181
