clusters/talos-ottawa/apps/media/app/tautulli/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "tautulli"
    item.homer.rajsingh.info/subtitle: "Plex Monitoring & Statistics"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/tautulli.svg"
    item.homer.rajsingh.info/keywords: "requests, media, jellyfin"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
  hostnames:
    - "tautulli.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tautulli
          port: 8181
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
